	  still supports the POSIX standard except that it does not strictly enforce
	  baud rate settings, permitting some non-portable, but useful baud rate settings
	  (this is what the short-lived AIX-like interfaces would have accomplished as well).
	* include/termios.h and lib/termios/*:  Redesigned yet again (this is getting
	  painful.  NuttX now supports the BOTHER baud setting just as Linux does.  termios
	  Bxxx definitions are again encoded; cf[set|get][o|i]speed now deal with only the
	  encoded values.  If the encode baud is set to BOTHER, then the values in the (non-
	  standard) c_ispeed and c_ospeed baud values may be accessed directly.
	* arch/arm/src/stm32/stm32_serial.c:  Add minimal termios support for the STM32
	  (BOTHER style baud settings only).  Contributed by Mike Smith.
	* configs/lpc4343-xplorer/src:  Clean up SPIFI-library based build to that it
	  actually works.
	* arch/arm/src/lpc43xx/lpc43_spifi.c:  Add support for verification to writes.
	  Add debug option to dump buffers.  Several bugfixes... almost works.
	* include/termios.h, lib/termios/*, and arch/arm/src/stm32/stm32_serial.c: :
	  BOTHER is gone again.
	* arch/arm/src/stm32/stm32_sdio.c and chip/stm32f20xx_pinmap.h:  STM32 F2 SDIO
	  fixes from Gary Teravskis and Scott Rondestvedt.
	* include/termios.h and lib/termios/*:  Replace cfsetispeed and cfsetospeed with
	  cfsetspeed (with definitions for the input/outputs in termios.h).  Same for
	  cfgetispeed and cfgetospeed.
	* configs/stm32f4discovery/src and configs/stm32f4discovery/pm:  Add a power
	  management configuration for the STM32F4Discovery and supporting logic.  This
	  check-in also includes some fixes for the F4 RTC alarm logic.
	* drivers/input/pga11x.c and include/nuttx/input/pga11x.h:  Add support for the
	  TI PGA112/3/6/7 amplifier/multiplexer parts.
	* configs/mirtoo/README.txt, nsh/defconfig, and nxffs/defconfig:  Add support
	  for the PGA117 on the Mirtoo module.
